VSE breaks when I insert or remove headphones #54490
Labels
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
No due date set.
Dependencies
No dependencies set.
Reference: blender/blender#54490
Loading…
Reference in New Issue
No description provided.
Delete Branch "%!s(<nil>)"
Deleting a branch is permanent. Although the deleted branch may continue to exist for a short time before it actually gets removed, it CANNOT be undone in most cases. Continue?
System Information
Windows 7, Nvidia GeForce GTX 950
Blender Version
Broken: 2.79
5bd8ac9
Problem Description
I load up the VSE and then plug in or remove my USB headphones. After this, when I hit play (which I have bound to space), the Video Sequence Editor pane no longer runs at the correct FPS (it is much faster) and there is no audio out of either output. Returning the audio output device to the original state does not fix the problem.
Exact steps for others to reproduce the error
I don't know the make of my headset, but they are gaming headphones with an attached mic. The audio driver is called USB PnP Sound Device.
Added subscriber: @cheeseman585
Added subscriber: @lichtwerk
just noting that it works fine here on linux with my headphones
Added subscriber: @Mets
oUUdDZOhfp.mp4
I can reproduce this in 2.7 and 2.8, although my Windows version isn't exactly cutting edge either. Don't even need to unplug headphones, just disable the active playback device.
Blender version
Broken: Blender 2.79b
f4dc9f9d68
Still broken: Blender 2.80
f98e4cbedb
System Info
Win10 v1607
Motherboard:
ASUS Prime B350 Plus
Headphones:
HyperX Cloud Alpha
GPU:
GTX 1070
Some things to note:
Added subscribers: @neXyon, @iss
Seems like an issue for @neXyon
With your last two points you mean the playback device in the windows audio settings right? I guess you can recover if you go to the blender user settings and switch the audio device to None and back?
Yep, going into User Prefs->System->Audio Device, setting it to None and then back to OpenAL fixes it on both 2.7 and 2.8. Good news?
And yes, by playback devices I mean the stuff in here on Windows:

Which is accessed(among other ways) via right clicking the volume slider icon and clicking on Playback Devices.
Changed status from 'Open' to: 'Resolved'
Should be fixed in
d3e856cd
but I can't really test it. Please give it a try with a build bot build newer than this comment and check if it works there. If not, feel free to reopen this bug report!